--- a/index.html
+++ b/index.html
@@ -3,27 +3,36 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>WebRTC Firebase Demo</title>
-  <style>
-    video {
-      width: 45%;
-      border: 1px solid #333;
-      margin: 10px;
-    }
-  </style>
-
+  <title>WebRTC Multi-Peer Demo</title>
+  <link rel="stylesheet" href="style.css">
   <!-- Firebase SDK -->
   <script src="https://www.gstatic.com/firebasejs/10.11.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.11.0/firebase-database-compat.js"></script>
 </head>
 <body>
-  <h2>WebRTC Firebase Demo</h2>
-  <div>
-    <video id="localVideo" autoplay muted playsinline></video>
-    <video id="remoteVideo" autoplay playsinline></video>
+  <header>
+    <h1>🌐 WebRTC Multi-Peer Call</h1>
+  </header>
+
+  <div class="controls">
+    <input type="text" id="roomInput" placeholder="Nhập Room ID">
+    <button id="joinRoom">🔗 Tham gia phòng</button>
+    <button id="shareScreen">🖥️ Chia sẻ màn hình</button>
+    <button id="toggleMic">🔇 Tắt Micro</button>
+    <button id="toggleCam">📷 Tắt Camera</button>
   </div>
-  <button id="startCall">Start Call</button>
-  <button id="joinCall">Join Call</button>
+
+  <div id="videos" class="video-grid">
+    <video id="localVideo" autoplay muted playsinline></video>
+  </div>
+
+  <div class="chat-section">
+    <div id="messages" class="messages"></div>
+    <div class="chat-input">
+      <input type="text" id="messageInput" placeholder="Nhập tin nhắn...">
+      <button id="sendMessage">📨 Gửi</button>
+    </div>
+  </div>
 
   <script src="firebase-config.js"></script>
   <script src="app.js"></script>
